[gd_scene load_steps=6 format=2]

[ext_resource path="res://Meshes/Wireframe/cube_wireframe.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/MultiballShip.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 1 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.5, 0.2 )

[node name="MultiballShip" type="StaticBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
mesh = ExtResource( 1 )
material/0 = null

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1 )
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Muzzle0" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.8, 0.5 )

[node name="Muzzle1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.8, 0 )

[node name="Muzzle2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.8, -0.5 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
